# brawlstars

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_app.bat  script_log.txt  test.py
src/: App.js  app.py  brawl_data.csv  brawl_data.json  brawlers_list.json  brawlers_list.parquet.gzip  constant.js  gadgets_list.json  get_brawlers.py  get_data.py  get_maps.py  get_table.py  index.css  maps_list.json  run_app.sh  scraping.ipynb  starpowers_list.json
src/components/Home/: Home.jsx  Modal.jsx  styles.css
src/components/Login/: Login.jsx
src/data/: brawl_data.csv  brawl_data.json  brawler_list.json  full_maps_list.json  gadgets_list.json  maps_list.json  mods_maps_list.json  starpowers_list.json
src/data/test/: new_row_example.json  test_brawl_data.json
src/data/users/a/: brawl_data.json
src/data/users/user3/: brawl_data.json
